--- a/queue/src/ui/src/app/views/maintenance/maintenance-queue/maintenance-queue.component.html
+++ b/queue/src/ui/src/app/views/maintenance/maintenance-queue/maintenance-queue.component.html
@@ -14,7 +14,10 @@
 
       <table>
         <tr>
-          <th>{{bd.branchName}}{{bd.departmentName}}</th>
+          <th>{{bd.branchName}}</th>
+        </tr>
+        <tr>
+          <th>{{bd.departmentName}}</th>
         </tr>
         <tr>
           <th>Ficha</th>
