--- a/queue/src/ui/src/app/views/maintenance/maintenance-branch-list/maintenance-branch-list.component.html
+++ b/queue/src/ui/src/app/views/maintenance/maintenance-branch-list/maintenance-branch-list.component.html
@@ -74,6 +74,7 @@
           <th>ID</th>
           <th>Nombre</th>
           <th>Letra</th>
+          <th>Eliminar</th>
         </tr>
         <tr *ngFor="let department of departments;let index=index">
           <td>
