--- a/queue/src/ui/src/app/views/maintenance/maintenance-queue/maintenance-queue.component.html
+++ b/queue/src/ui/src/app/views/maintenance/maintenance-queue/maintenance-queue.component.html
@@ -3,7 +3,7 @@
     <h2 class="row justify-content-center">Control de Filas</h2>
   </div>
   <div class="container-fluid">
-    <p class="row justify-content-center">Manejo de </p>
+    <p class="row justify-content-center"></p>
   </div>
   <div class="spacer" style="height: 20px">
   </div>
